--- a/examples/tiger.html
+++ b/examples/tiger.html
@@ -59,7 +59,13 @@
   var lottery = new LotteryTiger(document.getElementById('js_toggle'), document.querySelectorAll('.roller')) // eslint-disable-line
   lottery.on('start', function () {
     setTimeout(function () {
-      var ret = [Math.round(Math.random() * 2), Math.round(Math.random() * 2), Math.round(Math.random() * 2)]
+      var ret = [];
+      var max = 2; // 这个是 你有几张图片       如果有三张图片 则max= 3-1
+      if (true) { // 中奖了
+        ret = [0, 0, 0]   //  [0,0,0] 等于中了第一张图的奖品
+      } else {
+        ret = [Math.round(Math.random() * max), Math.round(Math.random() * max), Math.round(Math.random() * max)]
+      }
       lottery.setResult(ret)
 //            lottery.reset();
     }, 1000)
